modified first page

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>first index file </h1>
     <a href="index2.html">page2</a>
+    <p>maine just av av ek line add kiya, to check it works</p>
 </body>
 </html>
